--- a/deliver-elda/src/main/webapp/css/result.css
+++ b/deliver-elda/src/main/webapp/css/result.css
@@ -15,7 +15,7 @@ body {
 }
 
 nav.site {
-	background: url("../images/hmg-banner.png") no-repeat 0% 0%;
+	background: url("../images/elda-banner.png") no-repeat 0% 0%;
 	padding-top: 54px;
 }
 
