--- a/deliver-elda/src/main/resources/page-shell.vm
+++ b/deliver-elda/src/main/resources/page-shell.vm
@@ -41,11 +41,11 @@
 	.bordered-panel {
 		border: 1px solid black
 		; border-radius: 2ex 
-		; background-color: cyanic
 	}
 	
 	.right-header {
 		background-color: #444
+		; min-width: 3cm
 		; border-radius: 1ex
 		; color: white
 		; font-size: 140%
@@ -99,16 +99,28 @@
 </div>
 
 
+
 <div class="rightside-extras">
+	<div>
+		<div class="right-header">formats</div>
+		<div class="indented" style="margin-top: 1ex; margin-bottom: 1ex">
+			#foreach ($f in $formats)
+				<a href="$f.link">$f.name</a>
+			#end
+		</div>
+	</div>
+	
 	<div class="bordered-panel">
 		<div class="right-header">on this page</div>
 		#foreach ($item in $items)
 			<div style="margin-left: 1ex">&raquo; <a href="#$item.getId($ids)">$item.label</a></div>
 		#end
 	</div>
+
 </div>
 
 <div style="clear: both" />
+
 
 <footer>
 	<p>
