Made metadata hashmap. Added which-implementation display in footer.

--- a/deliver-elda/src/main/resources/page-shell.vm
+++ b/deliver-elda/src/main/resources/page-shell.vm
@@ -125,7 +125,7 @@
 <footer>
 	<p>
 		Powered by 
-			<a href="$meta.implementation.link">$meta.implementation.name</a>,
+			<a href="${meta['processor.software.releaseOf.homepage'].URI}">$meta["processor.software.label"]</a>,
 		an implementation of the
 			<a href="http://code.google.com/p/linked-data-api">Linked Data API</a>
 	</p>
