Velocity renderer now has metadata option sensitivity.

--- a/deliver-elda/src/main/resources/page-shell.vm
+++ b/deliver-elda/src/main/resources/page-shell.vm
@@ -122,6 +122,10 @@
 <div style="clear: both" />
 
 
+<textarea>
+$meta['selectionResult.query.value']
+</textarea>
+
 <footer>
 	<p>
 		Powered by 
