--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
@@ -74,19 +74,24 @@
 	<h1>Linked Data API</h1>
 </header>
 
-#macro(present, $item)
-	<h2><a href="$item.URI" id="$item.getId($ids)">$item.label</a></h2>
+#macro(nesting, $item)
 	#foreach ($property in $item.properties)
 		<hr style="color: #fff">
 		<div class="indented">
 			<a href="$property.URI">$property.label</a>
-			#foreach ($value in ${property.getValues($item)})
+			#foreach ($value in ${item.getValues($property)})
 				<div class="indented">
 					$value.shortForm($names)
+					#if ($value.isResource()) #nesting($value) #end
 				</div>
 			#end
 		</div>
 	#end
+#end
+
+#macro(present, $item)
+	<h2><a href="$item.URI" id="$item.getId($ids)">$item.label</a></h2>
+	#nesting($item)
 #end
 
 <div id="search-results">
