--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
@@ -12,13 +12,13 @@
 	#foreach ($property in $item.properties)
 		<hr style="color: #fff">
 		<div class="indented">
-			<a href="$property.URI">$property.label</a>
+			<a href="$property.URI">$property.label.cut()</a>
 			#foreach ($value in ${item.getValues($property)})
 				<div class="indented">
 					#if ($value.justALabel)
 						<a href="$value.URI">$value.label</a>
 					#else
-						$value.shortForm()
+						$value.shortForm().cut()
 						#if ($value.isResource()) #nesting($value) #end
 					#end
 				</div>
