--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
@@ -13,6 +13,8 @@
 		<hr style="color: #fff">
 		<div class="indented">
 			<a href="$property.URI">$property.label.cut()</a>
+			#set ($values = ${item.getValues($property)})
+			#if ($values.size() < 2) OPT #else MANY #end
 			#foreach ($value in ${item.getValues($property)})
 				<div class="indented">
 					#if ($value.justALabel)
