--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-head-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-head-shell.vm
@@ -1,4 +1,5 @@
 <head>
+<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Elda with Velocity</title>
 
 <script type="text/javascript" src="/elda/lda-assets/scripts/jquery.min.js"> </script>
