--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-shell.vm
@@ -27,6 +27,33 @@
 		<div class="indented">
 			<a href="$property.URI">$property.label.cut()</a>
 			#set ($values = ${item.getValues($property)})
+			#foreach ($value in $values)
+				<div class="indented" stylex="border-left: 1px solid black">
+					#if ($value.isLiteral())
+						<div style="float: left"> $value.shortForm().cut() </div>
+						
+						<div style="float: right; margin-right: 1ex">
+						#selection("maxEx-", "&lt;", "less than", $property, $value)
+						#selection("max-", "&le;", "less or equal to", $property, $value)
+						#selection("", "=", "equal to", $property, $value)
+						#selection("min-", "&ge;", "greater or equal to", $property, $value)
+						#selection("minEx-", "&gt;", "greater than", $property, $value)
+						</div>
+						
+						<div style="clear: both"> </div>
+					#else
+						#nesting($value)
+					#end
+				</div>
+			#end
+		</div>
+	#end
+#*
+	#foreach ($property in $item.properties)
+		<hr style="color: #fff">
+		<div class="indented">
+			<a href="$property.URI">$property.label.cut()</a>
+			#set ($values = ${item.getValues($property)})
 			#if ($values.size() < 2) #else #end
 			#foreach ($value in ${item.getValues($property)})
 				<div class="indented">
@@ -51,6 +78,7 @@
 			#end
 		</div>
 	#end
+*#
 #end
 
 <table width="100%">
