--- a/deliver-elda/src/main/webapp/WEB-INF/classes/page-head-shell.vm
+++ b/deliver-elda/src/main/webapp/WEB-INF/classes/page-head-shell.vm
@@ -4,7 +4,7 @@
 
 <script type="text/javascript" src="/elda/lda-assets/scripts/jquery.min.js"> </script>
 <script type="text/javascript" src="/elda/lda-assets/scripts/jquery-ui.min.js"> </script>
-<script src="../lda-assets/scripts/codemirror/codemirror_min.js" type="text/javascript"> </script>
+<script src="/elda/lda-assets/scripts/codemirror/codemirror_min.js" type="text/javascript"> </script>
 
 <script type="text/javascript">
 
