--- a/docs/style.css
+++ b/docs/style.css
@@ -1,66 +1,80 @@
 h1
-    { padding-top: 1ex
-	; background-color: #9ecae1
-    ; margin: 0
-    ; border-radius: 5px
-    ; -moz-border-radius: 5px
-    }
+	{ background-color: #9ecae1
+	; margin-top: 1ex
+	; border-radius: 5px
+	; -moz-border-radius: 5px
+	; text-indent: 1ex
+	}
 
 .heading
-    {
-    background: #9ecae1
-    ; padding-left: 1ex
-    ; padding-right: 1ex
-    ; border-radius: 5px
-    ; -moz-border-radius: 5px
-    }
+	{
+	background: #9ecae1
+	; padding-left: 1ex
+	; padding-right: 1ex
+	; border-radius: 5px
+	; -moz-border-radius: 5px
+	}
 
 .main h2
-    { padding-left: 1px
-    ; margin-top: 0.6ex
-    }
+	{ padding-left: 1px
+	; margin-top: 0.6ex
+	}
 
 h3
-    { background: white
-    ; padding-left: 1px
-    }
+	{ background: white
+	; padding-left: 1px
+	}
 
 pre 
-    { background: #dddddd 
-    ; margin-left: 2em
-    ; margin-right: 2em
-    }
+	{ background: #dddddd 
+	; margin-left: 2em
+	; margin-right: 2em
+	}
 
 body
-    { padding: 0 }
+	{ padding: 0 }
 
 img.logo
-    { float: right 
-    ; border:0 
-    }
-    
+	{ float: right 
+	; border:0 
+	}
+	
 div.main
-    { font-family: verdana, arial, sans-serif
-    ; margin-left: 5%
-    ; margin-right: 5%
-    ; clear: both
-    }
+	{ font-family: verdana, arial, sans-serif
+	; margin-left: 5%
+	; margin-right: 5%
+	; clear: both
+	}
 
-table {
-  border-color : black ;
-  border: 1px solid black;
-}
+table 
+	{
+	border-color : black
+	; border: 1px solid black	
+	}
 
-th {
-    text-align: left
-    ; color: black
-    ; background: #aaaaaa 
-}
+th 
+	{
+	text-align: left
+	; color: black
+	; background: #aaaaaa 
+	}
 
 tr:nth-child(2n) 
-    { background: #ffeeee }
+	{ background: #ffeeee }
 
 tr:nth-child(2n+1) 
-    { background: #ffffee }
+	{ background: #ffffee }
 
+ul 
+	{margin-left: -1ex }
 
+li 
+	{ margin-top: 1ex }
+
+.content-h1 
+	{ text-indent: 1em }
+
+.content-h2 
+	{ text-indent: 2em
+	; font-style: italic
+	}
