--- a/docs/style.css
+++ b/docs/style.css
@@ -1,77 +1,20 @@
-h1
-	{ background-color: #9ecae1
-	; margin-top: 1ex
-	; border-radius: 5px
-	; -moz-border-radius: 5px
-	; text-indent: 1ex
-	}
+.navbar-brand {
+	margin: 0 25px;
+	padding: 10px 0 0 0;
+}
 
-.heading
-	{
-	background: #9ecae1
-	; padding-left: 1ex
-	; padding-right: 1ex
-	; border-radius: 5px
-	; -moz-border-radius: 5px
-	}
+.navbar-brand h1, .navbar-brand h2 {
+	font-size: 12pt;
+	line-height: normal;
+	margin: 0;
+	padding: 0;
+}
 
-.main h2
-	{ padding-left: 1px
-	; margin-top: 0.6ex
-	}
+.navbar-brand h1 {
+	font-weight: bold;
+}
 
-h3
-	{ background: white
-	; padding-left: 1px
-	}
-
-pre 
-	{ background: #dddddd 
-	; margin-left: 2em
-	; margin-right: 2em
-	}
-
-body
-	{ padding: 0 }
-
-img.logo
-	{ float: right 
-	; border:0 
-	}
-	
-div.main
-	{ font-family: verdana, arial, sans-serif
-	; margin-left: 5%
-	; margin-right: 5%
-	; clear: both
-	}
-
-table 
-	{ margin: 1ex }
-
-th 
-	{
-	text-align: left
-	; color: black
-	; background: #aaaaaa 
-	}
-
-tr:nth-child(2n) 
-	{ background: #ffeeee }
-
-tr:nth-child(2n+1) 
-	{ background: #ffffee }
-
-ul 
-	{margin-left: -1ex }
-
-li 
-	{ margin-top: 1ex }
-
-.content-h1 
-	{ text-indent: 1em }
-
-.content-h2 
-	{ text-indent: 2em
-	; font-style: italic
-	}
+.navbar-right img {
+	margin-right: 25px;
+	height: 45px;
+}
